--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,34 @@
 {
-    "$schema": "https://getcomposer.org/schema.json",
     "name": "socialiteproviders/zitadel",
     "description": "Zitadel OAuth2 Provider for Laravel Socialite",
     "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Socialiteproviders\\Zitadel\\": ""
-        }
-    },
+    "keywords": [
+        "laravel",
+        "oauth",
+        "provider",
+        "socialite",
+        "zitadel"
+    ],
     "authors": [
         {
             "name": "Gurkirat Singh",
             "email": "tbhaxor@gmail.com"
         }
     ],
-    "require": {
-        "php": "^8.1",
-        "ext-json": "*",
-        "socialiteproviders/manager": "^4.4"
-    },
     "support": {
         "issues": "https://github.com/socialiteproviders/providers/issues",
         "source": "https://github.com/socialiteproviders/providers",
-        "docs": "https://socialiteproviders.com/zoho"
+        "docs": "https://socialiteproviders.com/zitadel"
+    },
+    "require": {
+        "php": "^8.0",
+        "ext-json": "*",
+        "socialiteproviders/manager": "^4.4"
+    },
+    "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {
+            "SocialiteProviders\\Zitadel\\": ""
+        }
     }
 }
